--- a/compositional_skills/writing/freeform/poetry/freeverse/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/freeverse/qna.yaml
@@ -1,3 +1,4 @@
+task_description: 'The poem task enables the telling of poems based on various topics'
 created_by: shivsr
 seed_examples:
 - answer: 'In the waning days of summer''s reign,
@@ -53,6 +54,9 @@ seed_examples:
 
     The promise of springtime breaks anew.'
   question: Write a free verse poem that explores the changing colors of autumn leaves.
+  attribution:
+  - source: https://medium.com/the-after-thought-echoes-insights/whispers-of-autumn-the-elegy-of-seasons-6c5999f07cbc
+    license: CC-BY-SA
 - answer: 'Far across the hills, the sun rises,
 
     with golden rays, warming plains far and wide
@@ -88,4 +92,101 @@ seed_examples:
 
     To thee, a great deal we owe.'
   question: Write a free verse poem that describes the sun.
-task_description: ''
+  attribution:
+  - source: self-authored
+    license: Apache-2.0
+- answer: 'You are truly a jewel of the sky
+
+    creating wonder in the eyes of passerby,
+
+    Many shapes and sizes you change
+
+    Delighting hearts of the people of any age,
+
+    Reflecting colors like diamonds in the crown
+
+
+    By you, the sheets of the town are all cooled down,
+
+    You are my dearest friend, O'' Rain
+
+    It is a pleasure to welcome you again and again.'
+  question: Write a free verse poem that describes rain.
+  attribution:
+  - source: self-authored
+    license: Apache-2.0
+- answer: 'In the rustle of leaves,
+
+    In the swaying of trees,
+
+    I feel you,
+
+
+    Traveling across salty seas,
+
+    In the cool breeze,
+
+    I feel you,
+
+
+    Voyaging far off lands,
+
+    Drawing patterns on sands,
+
+    I see you,
+
+
+    Howling along all night,
+
+    Painting the town snow white,
+
+    I see you,
+
+
+    There is so much to you that is unknown,
+
+    Yet I feel I know you
+
+    and that you are my own!'
+  question: Write a free verse poem that describes the wind.
+  attribution:
+  - source: self-authored
+    license: Apache-2.0
+- answer: 'Appearing as miles and miles of blue,
+
+    where the sky starts and where it ends
+
+    there seems to be no clue,
+
+    You are a vast expanse of mystery O'' Sea!
+
+
+    Shells and pearls are not the only things you hide
+
+    amidst corals and oysters
+
+    that decorate your sides,
+
+    You are an abode of treasure O'' Sea!
+
+
+    Reflecting the sky''s numerous hues
+
+    Assuming likewise several moods
+
+    Sometimes black, sometimes orange and sometimes blue
+
+    You are verily a painting O'' Sea!
+
+
+    Home to million creatures beneath,
+
+    Adorned with kelp and sea weed,
+
+    Countless are the mouths that you feed
+
+    You are world of your own O'' Sea!'
+  question: Write a free verse poem that describes the sea.
+  attribution:
+  - source: self-authored
+    license: Apache-2.0
