--- a/compositional_skills/writing/freeform/logical_reasoning/qna.yaml
+++ b/compositional_skills/writing/freeform/logical_reasoning/qna.yaml
@@ -1,5 +1,11 @@
 created_by: aspanner
 seed_examples:
-- answer: "Sally is 1 of her brothers 2 sisters. Therefore Sally has 1 sister."
-  question: Sally is a girl. Sally has 3 brothers. Each brother has 2 sisters. How many sisters does Sally have?
+- answer: "Andrea (a girl) is 1 of her brothers 2 sisters. Therefore Sally has 1 sister."
+  question: Andrea is a girl. Andrea has 3 brothers. Each brother has 2 sisters. How many sisters does Andrea have?
+  
+  answer: "Bruce is 1 of his mum's sons and he has 3 brothers. Therefore Bruce's mum has 4 sons."
+  question: Bruce is a boy. Bruce has 3 brothers. How many sons does the mum of Bruce have?
+
+  answer: "Carl has 3 sisters in total, therefore each of Carl's sister has 2 sisters."
+  question: Carl is a boy and has 3 sisters. How many sisters do the sisters of Carl have?
 task_description: ''
