--- a/compositional_skills/writing/freeform/technical/specification/qna.yaml
+++ b/compositional_skills/writing/freeform/technical/specification/qna.yaml
@@ -1,128 +1,58 @@
-created_by: shivsr
+created_by: nirjhar
 seed_examples:
-- answer: '# Technical Specification: Advanced Data Compression Module
-
-
-    ## 1. Introduction
-
-
-    This technical specification outlines the requirements, design, and testing procedures
-    for an advanced data compression module, intended for integration into our existing
-    scalable and distributed file storage system. The module will enhance storage
-    efficiency by reducing data redundancy and minimizing storage space requirements.
-
-
-    ## 2. Requirements
-
-
-    ### 2.1 Functional Requirements
-
-
-    - Implement industry-standard compression algorithms, such as gzip, DEFLATE, and
-    LZ4.
-
-    - Support variable compression levels for trade-offs between compression ratio
-    and processing time.
-
-    - Ensure compatibility with diverse data types, including text, images, and multimedia
-    files.
-
-
-    ### 2.2 Non-Functional Requirements
-
-
-    - Maintain minimal impact on overall system performance.
-
-    - Provide seamless integration with the existing file storage system.
-
-    - Offer configurable compression settings for optimal storage efficiency.
-
-
-    ## 3. Design
-
-
-    ### 3.1 Architecture
-
-
-    The compression module will be designed as a modular component, integrating with
-    the existing file storage system through a well-defined API. The module will consist
-    of the following layers:
-
-
-    - **Data Input:** Receives data from the file storage system.
-
-    - **Compression Engine:** Applies selected compression algorithms.
-
-    - **Data Output:** Returns compressed data to the file storage system.
-
-
-    ### 3.2 Compression Algorithms
-
-
-    The compression module will support multiple algorithms, allowing users to choose
-    the most suitable option based on their specific use case and performance requirements.
-
-
-    ### 3.3 Configuration Interface
-
-
-    A user-friendly configuration interface will be provided, enabling users to adjust
-    compression levels and select preferred algorithms.
-
-
-    ## 4. Testing
-
-
-    ### 4.1 Test Cases
-
-
-    - Verify compatibility with various data types.
-
-    - Measure compression ratios for different algorithms and compression levels.
-
-    - Evaluate performance impact on the overall system.
-
-    - Test error handling and recovery procedures.
-
-
-    ### 4.2 Test Data
-
-
-    Test data will include a diverse set of files, such as text documents, images,
-    audio files, and video files, to ensure comprehensive testing and validation.
-
-
-    ### 4.3 Test Environment
-
-
-    Testing will be conducted in a controlled environment, replicating the production
-    system''s hardware and software configurations.
-
-
-    ## 5. Acceptance Criteria
-
-
-    - The compression module must support all required compression algorithms.
-
-    - Compression ratios must meet or exceed industry standards for the respective
-    algorithms.
-
-    - The module must not significantly impact overall system performance.
-
-    - The module must pass all defined test cases and meet non-functional requirements.
-
-
-    ## 6. Future Enhancements
-
-
-    Future enhancements may include:
-
-
-    - Integration with machine learning algorithms for intelligent compression.
-
-    - Support for emerging compression standards and technologies.
-
-    - Advanced error detection and correction mechanisms.'
-  question: Develop a technical specification for a new hardware or software component,
-    including requirements, design, and testing.
+  - question: "I have to train my model on compositional skills and good skills to add are Adding new types of documents and writing styles - e.g. song lyrics, 5 paragraph essays, emails, tweets… Skills to better format and reassemble information (adding headlines, making text shorter…) Chain-of-Thought Reasoning (e.g. Sisi is prettier than Nora, Katie is prettier than both of them. Who is the ugliest?) Table Analysis and Processing (e.g. sorting, joining…) Word Problems (e.g. Can LLM be a personal trainer?) Searching, Extraction and Summarization (e.g. create a TODO list, create a headline…) Complex Rulesets and Games (you need to provide the rules as a context of every example) Writing Style and Personalities (adapting the answer to a particular personality - e.g. 5 year old; you need to describe the personality in the context or in the question) Instruction-Following Behavior (e.g. answer this question n 200 words or less etc.)"
+    answer: |
+      "Training your model on compositional skills and enhancing its abilities across various tasks, such as handling different document types, formatting information, and complex reasoning, is ambitious. Testing its limits can help you identify areas for improvement. Here are questions and tasks designed to challenge your model in the areas you mentioned. These are likely to be difficult for many models unless they have been specifically trained or fine-tuned to handle such nuanced requests:
+
+      Adding New Types of Documents and Writing Styles:
+          'Write a song lyric about the journey of a leaf falling from a tree, incorporating scientific terms.'
+          'Compose a tweet summarizing the plot of 'War and Peace' in 280 characters.'
+
+      Skills to Better Format and Reassemble Information:
+          'Convert the following text into a bullet-point summary, each point no longer than 10 words.'
+          'Create a compelling headline for an article about the benefits of deep-sea exploration.'
+
+      Chain-of-Thought Reasoning:
+          'If Alice is taller than Bob, and Bob is taller than Charlie, but Dave is the tallest, who is the shortest?'
+          'A train leaves from New York to Washington carrying 5 passengers. At Philadelphia, 2 get off and 4 get on. Who is the youngest passenger?'
+
+      Table Analysis and Processing:
+          'Given a table of countries and populations, identify the 3rd most populous.'
+          'Join two tables: one with employees' names and departments, and another with departments and managers. List all employees under each manager.'
+
+      Word Problems:
+          'If a car travels at 60 miles per hour for 1.5 hours, how far does it go? Assume it stops for 15 minutes.'
+          'Can a neural network model serve as a personal fitness trainer? Explain considering the model's limitations.'
+
+      Searching, Extraction, and Summarization:
+          'Summarize the main arguments of the last three Nobel Peace Prize lectures.'
+          'Create a TODO list from the following project meeting transcript.'
+
+      Complex Rulesets and Games:
+          'Explain how to win at chess in 10 moves or less, assuming both players make optimal moves.'
+          'Given the rules of a made-up card game where players draw and play cards to alter the game's 'reality,' explain how to achieve a specific 'reality' state.'
+
+      Writing Style and Personalities:
+          'Write an explanation of quantum computing for a 5-year-old.'
+          'Adapt the story of Cinderella to reflect a cyberpunk future, using slang from the genre.'
+
+      Instruction-Following Behavior:
+          'Answer the following question in exactly 200 words: What are the implications of quantum supremacy for encryption technologies?'
+          'Provide instructions for baking a cake, but format them as a diary entry.'"
+  - question: "if A likes B and B likes c and C likes A, do you think A also like C"
+    answer: |
+      "If A likes B, B likes C, and C likes A, it suggests a mutual appreciation between A and C, at least from C's perspective. While this scenario creates a positive loop of liking each other, whether A likes C directly cannot be conclusively determined without understanding the reasons behind their likes. Personal preferences and affections can be influenced by various factors and are not automatically reciprocal just because of mutual connections. However, this setup does create a conducive environment for A to potentially like C, given the positive connections among them."
+  - question: "how is the day today?"
+    answer: |
+      "I'm not able to provide real-time or location-specific weather updates or current day conditions. For the most accurate and up-to-date information on the weather or how the day is in your area, it's best to check a reliable weather service or app. Is there anything else you'd like to know or discuss that doesn't involve real-time data?"
+  - question: "Which of the following statements comparing linear and logistic regressions is TRUE?"
+    choices: 
+      - "Both linear and logistic regression can be used to predict categorical responses and attain a point’s likelihood of belonging to each class."
+      - "In this course, linear regression minimizes the mean absolute error, while logistic regression minimizes the mean squared error."
+      - "Linear regression is used for a continuous target whereas logistic regression is more suitable for a categorical target."
+      - "Independent variables in linear regression can be continuous or categorical, but can only be categorical in logistic regression."
+    answer: |
+      "Linear regression is used for a continuous target whereas logistic regression is more suitable for a categorical target.
+
+      This statement accurately reflects the primary difference in the applications of linear and logistic regression. Linear regression is used for predicting outcomes that are continuous (e.g., house prices, temperatures), while logistic regression is used for binary (or categorical) outcomes (e.g., yes/no, win/lose)."
 task_description: ''
