Update qna.yaml with "Java"
Signed-off-by: Amit Kumar Das <28519071+amtdas@users.noreply.github.com>

--- a/compositional_skills/writing/freeform/jokes/techpun/qna.yaml
+++ b/compositional_skills/writing/freeform/jokes/techpun/qna.yaml
@@ -14,7 +14,7 @@ seed_examples:
       Both have mega bytes!
   - question: Why does C not like Java?
     answer: |
-      Because C has a class.
+      Because Java has a class.
   - question: Why did the developer go broke?
     answer: |
       Because he used up all his cache.
