--- a/compositional_skills/extraction/inference/qualitative/sentiment/qna.yaml
+++ b/compositional_skills/extraction/inference/qualitative/sentiment/qna.yaml
@@ -20,5 +20,5 @@ seed_examples:
 task_description: ''
 attribution:
   - source: 'self_authored'
-    license: 'Apache 2.0'
+    license: 'cc-by-2.0'
 
