Fix linting qna.yaml
Signed-off-by: Lucas Morin <73230090+lucas-morin@users.noreply.github.com>

--- a/compositional_skills/writing/freeform/technical/chemistry/molecule_drawing/qna.yaml
+++ b/compositional_skills/writing/freeform/technical/chemistry/molecule_drawing/qna.yaml
@@ -1,4 +1,4 @@
-task_description: Generate an ASCII representation of a molecule.
+task_description: 'Generate an ASCII representation of a molecule.'
 created_by: lucas-morin
 seed_examples:
   - answer: |
