--- a/compositional_skills/writing/freeform/technical/chemistry/molecule_drawing/qna.yaml
+++ b/compositional_skills/writing/freeform/technical/chemistry/molecule_drawing/qna.yaml
@@ -14,6 +14,9 @@ seed_examples:
        C
     ```
   question: Generate an ASCII representation for the molecule "C1=CC=C(C=C1)C=O".
+  attribution:
+      - source: self-authored
+        license: Apache-2.0
 - answer: |
     ```
           C
@@ -23,6 +26,9 @@ seed_examples:
           C
     ```
   question: Draw an ASCII representation for the molecule "COC(C)(C)C".
+  attribution:
+      - source: self-authored
+        license: Apache-2.0
 - answer: |
     ```
     C--C==O
@@ -30,6 +36,9 @@ seed_examples:
        O
     ```
   question: Create an ASCII representation for the molecule "CC(=O)O".
+  attribution:
+      - source: self-authored
+        license: Apache-2.0
 - answer: |
     ```
        O
@@ -37,6 +46,9 @@ seed_examples:
     C--C==O
     ```
   question: Draw an ASCII representation for the molecule "CC(=O)O".
+  attribution:
+      - source: self-authored
+        license: Apache-2.0
 - answer: |
     ```
     O--C==O
@@ -44,3 +56,6 @@ seed_examples:
        C
     ```
   question: Draw an ASCII representation for the molecule "CC(=O)O".
+  attribution:
+      - source: self-authored
+        license: Apache-2.0
