--- a/knowledge/technical_manual/ibm_redbooks/qna.yaml
+++ b/knowledge/technical_manual/ibm_redbooks/qna.yaml
@@ -1,4 +1,4 @@
-created_by: Abhi-B
+created_by: IBM Research
 domain: ibm redbooks
 seed_examples:
 - answer: The Cross Applications - Situation Handling capability in SAP S/4HANA allows
