--- a/knowledge/textbook/history/ibm_history/qna.yaml
+++ b/knowledge/textbook/history/ibm_history/qna.yaml
@@ -1,4 +1,4 @@
-created_by: Abhi-B
+created_by: IBM Research
 domain: history
 seed_examples:
   - answer: Thomas J. Watson's vision and leadership strategies had a profound
