Update nerd jokes skill
Signed-off-by: dan-esc <42890399+dan-esc@users.noreply.github.com>

--- a/compositional_skills/writing/freeform/jokes /silly/qna.yaml
+++ b/compositional_skills/writing/freeform/jokes /silly/qna.yaml
@@ -8,10 +8,10 @@ seed_examples:
     answer: To obtain a future bachelor.
   - question: What did the teacher say to the steak who arrived to school late?
     answer: Well done!
-  - question: What did tortoise say to the hare?
+  - question: How does a tortoise like his stew cooked?
     answer: Slow'n'steady.
   - question: Why is the mushroom the coolest vegetable?
-    answer: Because it's a Funghi
+    answer: Because it's a Funghi.
     attribution:
       - source: self-authored
         license: Apache-2.0
